--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @food, url: new_food_path, local: true, method: :post, scope: :post do |f| %>
+<%= form_with model: @food, local: true, method: :post, scope: :food do |f| %>
             <%= f.text_field :name, placeholder: "Name", rows: "8", required: true %>
             <%= f.text_field :measurement_unit, placeholder: "Measurement Unit", rows: "8", required: true %>
             <%= f.number_field :price, step: 0.01, placeholder: "Unit Price", rows: "8", required: true %>
