Delete button working

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -16,7 +16,7 @@
 <td><%= f.name %></td>
 <td><%= f.measurement_unit %></td>
 <td><%= f.price %></td>
-<td><%= button_to "Delete", foods_path, method: :delete %></td>
+<td><%= button_to "Delete", food_path(f), method: :delete %></td>
 </tr>
 <% end %>
 </tbody>
