--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Inventory#index</h1>
-<p>Find me in app/views/inventory/index.html.erb</p>
+<h1>Inventory</h1>
+<%= link_to "Add inventory", new_inventory_path%>
+<div>
+<% @inventories.each do |i|%>
+ <div>
+  <%= i.name %>
+  <%= button_to "Delete", inventory_path(i), method: :delete %>
+ </div>
+<% end %>
+<div>
