--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -5,6 +5,7 @@
  <div>
   <%= i.name %>
   <%= button_to "Delete", inventory_path(i), method: :delete %>
+   <%= link_to "View Inventory", inventory_path(i)%>
  </div>
 <% end %>
-<div>
+</div>
