Add food to recipes

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,5 +6,6 @@
     <%= recipe.description %>
     <span>By: <%= recipe.user.name %></span>
     <%= button_to 'Delete Recipe', recipe_path(recipe), method: :delete %>
+    <%= link_to 'View Recipe', recipe_path(recipe) %>
   </div>
 <% end %>
