--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @recipe.name %></h1>
-<%= link_to "Add Food",  new_recipe_recipe_food_path(@recipe)%>
+<%= link_to "Add Food",  new_recipe_recipe_food_path(@recipe), class: "food-btn" %>
+<hr />
 
 <table>
   <thead>
