--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,3 +1,7 @@
+<h1>New Food</h1>
+
+<hr />
+
 <%= form_with model: @food, local: true, method: :post, scope: :food do |f| %>
             <%= f.text_field :name, placeholder: "Name", rows: "8", required: true %>
             <%= f.text_field :measurement_unit, placeholder: "Measurement Unit", rows: "8", required: true %>
