--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,26 @@
-<h1> Home page </h1>
+<h1 class="welcome"> Welcome to our Recipe App </h1>
 
-<%= link_to "Sign up", new_user_registration_path%>
-<%= link_to "sign in", new_user_session_path %>
+  <div>
+  </div>
+  <div>
+    <ul class="login-bar">
+      <% if user_signed_in? %>
+        <li>
+          <%= button_to "Sign Out", destroy_user_session_path, class: "sign-btn", method: :delete %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to "Sign In", new_user_session_path, class: "sign-btn" %>
+          <%= link_to "Sign Up", new_user_registration_path, class: "sign-btn" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
 
-<ul>
-  <li> <%= link_to "Food", foods_path%></li>
-</ul>
-
+<nav>
+  <ul class="navigation">
+    <li class="nav-li"> <%= link_to "Food", foods_path, class: "link" %></li>
+    <li class="nav-li"> <%= link_to "Recipes", recipes_path, class: "link"%></li>
+    <li class="nav-li"> <%= link_to "Inventory", inventories_path, class: "link link-invent"%></li>
+  </ul>
+</nav>
