--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Inventory</h1>
-<%= link_to "Add inventory", new_inventory_path%>
+<%= link_to "Add inventory", new_inventory_path, class: "inventory-btn" %>
+<hr />
 <div>
 <% @inventories.each do |i|%>
- <div>
-  <%= i.name %>
+ <div class="inventory-container">
+  <p class="inventory-name"><%= i.name %></p>
   <%= button_to "Delete", inventory_path(i), method: :delete %>
-   <%= link_to "View Inventory", inventory_path(i)%>
+   <%= link_to "View Inventory", inventory_path(i), class: "view-inventory-btn" %>
  </div>
 <% end %>
 </div>
