--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @inventory.name %></h1>
-<%= link_to "Add Food",  new_inventory_inventory_food_path(@inventory)%>
+<%= link_to "Add Food",  new_inventory_inventory_food_path(@inventory), class: "food-btn" %>
+<hr />
 
 <table>
   <thead>
