Create popup window

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <div class="modal">
+      <%= turbo_frame_tag :modal %>
+    </div>
     <%= render "layouts/alert" %>
     <%= yield %>
   </body>
