--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,6 +7,10 @@
 
 /* home-page */
 
+.body {
+  position: relative;
+}
+
 .welcome {
   text-align: center;
 }
@@ -297,4 +301,23 @@ input[type=submit]:hover {
   background: #000;
   font-size: 20px;
   cursor: pointer;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.show-modal {
+    display: flex !important;
 }
