--- a/app/views/home/shopping_list.html.erb
+++ b/app/views/home/shopping_list.html.erb
@@ -1,1 +1,22 @@
 <h1>Shopping List</h1>
+
+<div>
+<table>
+<thead>
+<tr>
+<th>Food</th>
+<th>Quantity</th>
+<th>Price</th>
+</tr>
+</thead>
+<tbody>
+<% @needed_foods.each do |f|%>
+<tr>
+<td><%= f[:name] %></td>
+<td><%= f[:quantity] %></td>
+<td><%= f[:price] %></td>
+</tr>
+<% end %>
+</tbody>
+</table>
+</div>
