--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -23,7 +23,12 @@
 <td><%= f.name %></td>
 <td><%= f.measurement_unit %></td>
 <td><%= f.price %></td>
-<td><%= button_to "Delete", food_path(f), method: :delete %></td>
+
+<td>
+  <% if can? :destroy, @foods %>
+    <%= button_to "Delete", food_path(f), method: :delete %>
+  <% end %>
+</td>
 </tr>
 <% end %>
 </tbody>
