--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -5,7 +5,9 @@
 <% @inventories.each do |i|%>
  <div class="inventory-container">
   <p class="inventory-name"><%= i.name %></p>
-  <%= button_to "Delete", inventory_path(i), method: :delete %>
+  <% if can? :destroy, @inventories %>
+    <%= button_to "Delete", inventory_path(i), method: :delete %>
+  <% end %>
    <%= link_to "View Inventory", inventory_path(i), class: "view-inventory-btn" %>
  </div>
 <% end %>
