--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -15,7 +15,11 @@
     <tr>
       <td><%= f.food.name %></td>
       <td><%= f.quantity %></td>
-      <td><%= button_to "Delete", inventory_inventory_food_path(@inventory, f), method: :delete %></td>
+      <td>
+      <% if can? :destroy, post %>
+        <%= button_to "Delete", inventory_inventory_food_path(@inventory, f), method: :delete %>
+      <% end %>
+      </td>
     </tr>
   <% end %>
   </tbody>
