--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Home", root_path, class: "home-btn" %>
+
 <h1><%= @inventory.name %></h1>
 <%= link_to "Add Food",  new_inventory_inventory_food_path(@inventory), class: "food-btn" %>
 <hr />
