--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Home", root_path, class: "home-btn" %>
+
 <h1>Your Recipes</h1>
 <%= link_to "Add Recipe", new_recipe_path, class: "recipe-btn" %>
 <hr />
