--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Home", root_path, class: "home-btn" %>
 
 <h1><%= @recipe.name %></h1>
-<% if can? :create, @recipe_food %>
+<% if can? :create, @recipe %>
   <%= link_to "Add Food",  new_recipe_recipe_food_path(@recipe), class: "food-btn" %>
 <% end %>
 <%= link_to "Shopping List", recipe_new_shopping_list_path(@recipe), data:{turbo_frame: "modal"}, class: "food-btn" %>
@@ -21,7 +21,7 @@
       <td><%= f.food.name %></td>
       <td><%= f.quantity %></td>
       <td>
-      <% if can? :destroy, @recipe_foods %>
+      <% if can? :destroy, @recipe %>
         <%= button_to "Delete", recipe_recipe_food_path(@recipe, f), method: :delete %>
        <% end %>
       </td>
