--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -272,22 +272,16 @@ input[type=submit]:hover {
 }
 
 .modal {
-  display: none;
+  display: flex;
   position: fixed;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  left: 300px;
+  top: 200px;
+  width: 50%;
+  height: 50%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.show-modal {
-  display: flex !important;
 }
 
 .home-btn {
