--- a/app/views/recipes/new_shopping_list.html.erb
+++ b/app/views/recipes/new_shopping_list.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag :modal do %>
 <h1>New shopping list</h1>
-<%= form_with url: recipe_create_new_shopping_list_path(@recipe), local: true, method: :post, data: { turbo: true } do |f| %>
+<%= form_with url: recipe_create_new_shopping_list_path(@recipe), local: true, method: :post, data: { turbo: false } do |f| %>
       <div class="form-group">
         <%= f.select :inventory_id, @inventories.map { |t| [t.name, t.id]}, {}, class: "form-control" %>
       </div>
