--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,7 @@
+<div class="modal">
+  <%= turbo_frame_tag :modal %>
+</div>
+
 <%= link_to "Home", root_path, class: "home-btn" %>
 
 <h1><%= @recipe.name %></h1>
