--- a/app/views/home/shopping_list.html.erb
+++ b/app/views/home/shopping_list.html.erb
@@ -1,6 +1,9 @@
 <%= link_to "Home", root_path, class: "home-btn" %>
 <h1>Shopping List</h1>
 
+<div>Amount of food to buy: <%= @total_food %></div>
+<div>Total value of food needed: $<%= @total_price %></div>
+
 <div>
 <table>
 <thead>
@@ -15,7 +18,7 @@
 <tr>
 <td><%= f[:name] %></td>
 <td><%= f[:quantity] %></td>
-<td><%= f[:price] %></td>
+<td>$<%= f[:price] %></td>
 </tr>
 <% end %>
 </tbody>
